fix glitch with copyright notice text wrapping

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -281,6 +281,7 @@ footer {
 .copyright {
   display: flex;
   justify-content: flex-start;
+  width: 100%;
 }
 
 .disclosure ul {
